# sj_editor_framework_rs

./: Cargo.toml
sje_core/: Cargo.toml
sje_core/src/: lib.rs
sje_generator_macro/: Cargo.toml
sje_generator_macro/src/: immutable_macro.rs  lib.rs  project_macro.rs
sje_generator_macro/tests/: immutable_test.rs
sje_immutable_macro/: Cargo.toml
sje_immutable_macro/src/: lib.rs
sje_workspace/: Cargo.toml
sje_workspace/examples/: simple_workspace.rs
sje_workspace/src/: document.rs  document_info.rs  lib.rs  project.rs  workspace.rs
