[package]
name = "sje_generator_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sje_core = { path = "../sje_core" }
proc-macro2 = "1.0.38"
quote = "1.0.18"
syn = {version = "1.0.93", features = ["full", "extra-traits", "visit-mut", "visit"]}